--- a/Lecture3.slides.html
+++ b/Lecture3.slides.html
@@ -5560,7 +5560,7 @@ C &amp;=&amp; U\Gamma U^T \approx \dot U \dot \Gamma \dot U^T
 $$</p>
 <ul>
 <li>The dotted version only retains the first $k$ eigen values</li>
-<li>$\dot R, \dot U$ are $n \times k$, $\dot \Lambda, \dot \Gamma$ are $k \times k$.</li>
+<li>$\dot R, \dot U$ are $n \times k$ matrices; $\dot \Lambda, \dot \Gamma$ are $k \times k$ matrices.</li>
 </ul>
 </div>
 </div>
@@ -5621,7 +5621,7 @@ $$</p>
 <p>It is tempting to think they are equivalent as:
 $$ \Sigma U \Gamma U^T \Sigma = U (\Sigma \Gamma \Sigma) U^T $$</p>
 <ul>
-<li>thus $ \Lambda = \Sigma \Gamma \Sigma $, and eigen vectors remain unchanged</li>
+<li>if so, $ \Lambda = \Sigma \Gamma \Sigma $, and $R = U$, then we are happy</li>
 </ul>
 </div>
 </div>
