--- a/Lecture3.slides.html
+++ b/Lecture3.slides.html
@@ -4979,7 +4979,8 @@ vucdYzMzMzMzvGNsZmZmZgY4MTYzMzMzA5wYm5mZmZkBTozNzMzMzAAnxmZmZmZmgBNjMzMzMzMA
 </div>
 </div>
 
-</div>
+</div></section><section>
+    
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
