--- a/Lecture3.slides.html
+++ b/Lecture3.slides.html
@@ -2256,30 +2256,31 @@ R^{-1} A &amp;= \Lambda R^{-1} \\
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>$$\overbrace{\pmatrix{
-* &amp; * &amp; * \\  
-* &amp; * &amp; * \\  
-* &amp; * &amp; * \\  
-* &amp; * &amp; * \\  
-* &amp; * &amp; * \\  
-* &amp; * &amp; *  
+<p>$$
+\overbrace{\pmatrix{
+* &amp; * &amp; * &amp; * \\  
+* &amp; * &amp; * &amp; * \\  
+* &amp; * &amp; * &amp; * \\  
+* &amp; * &amp; * &amp; * \\  
+* &amp; * &amp; * &amp; * \\  
+* &amp; * &amp; * &amp; * 
 }}^A = 
 \overbrace{\pmatrix{
-* &amp; * &amp; * &amp; * &amp; * \\  
-* &amp; * &amp; * &amp; * &amp; * \\  
-* &amp; * &amp; * &amp; * &amp; * \\  
-* &amp; * &amp; * &amp; * &amp; * \\  
-* &amp; * &amp; * &amp; * &amp; * \\
-* &amp; * &amp; * &amp; * &amp; * 
+* &amp; * &amp; * &amp; * &amp; * &amp; * \\  
+* &amp; * &amp; * &amp; * &amp; * &amp; * \\  
+* &amp; * &amp; * &amp; * &amp; * &amp; * \\  
+* &amp; * &amp; * &amp; * &amp; * &amp; * \\  
+* &amp; * &amp; * &amp; * &amp; * &amp; * \\
+* &amp; * &amp; * &amp; * &amp; * &amp; *
 }}^Q 
 \;\;
 \overbrace{\pmatrix{
-* &amp; * &amp; * \\ 
-0 &amp; * &amp; * \\ 
-0 &amp; 0 &amp; * \\
-0 &amp; 0 &amp; 0 \\
-0 &amp; 0 &amp; 0 \\
-0 &amp; 0 &amp; 0 
+* &amp; * &amp; * &amp; *\\ 
+0 &amp; * &amp; * &amp; *\\ 
+0 &amp; 0 &amp; * &amp; * \\
+0 &amp; 0 &amp; 0 &amp; * \\
+0 &amp; 0 &amp; 0 &amp; 0 \\
+0 &amp; 0 &amp; 0 &amp; 0
 }}^R$$</p>
 <p>If $A$ is not fully ranked:</p>
 <ul>
